--- a/atividade02.ipynb
+++ b/atividade02.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50c29fea-f6d8-443d-9ad3-cbb3c04d7d1f",
+   "metadata": {},
+   "source": [
+    "Utilizando dados de sondagem de Chapecó"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1946d2d3-e154-450c-8d57-b0edf33c53ae",
